--- a/.github/workflows/scan_terraform.yml
+++ b/.github/workflows/scan_terraform.yml
@@ -1,6 +1,10 @@
 name: Terrascan Scan
 
 on:
+  push:
+    paths:
+      - terraform
+        
   workflow_dispatch:    
     inputs:
       working-directory:
